--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-dom": "^16.3.1",
     "react-hot-loader": "^4.2.0",
     "react-html-parser": "^2.0.2",
+    "react-icons-kit": "^1.2.1",
     "react-localize-redux": "^3.5.1",
     "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
