--- a/package.json
+++ b/package.json
@@ -121,6 +121,7 @@
     "waait": "^1.0.2",
     "webpack": "^4.5.0",
     "webpack-assets-manifest": "^3.0.1",
+    "webpack-blocks": "^1.0.0",
     "webpack-cli": "^3.1.2",
     "webpack-dev-middleware": "^3.1.2",
     "webpack-dev-server": "^3.1.4",
