--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "html-react-parser": "^0.4.5",
     "ignore-loader": "^0.1.2",
     "isomorphic-fetch": "^2.2.1",
+    "jest-svg-transformer": "^1.0.0",
     "js-cookie": "^2.2.0",
     "lodash": "^4.17.10",
     "node-fetch": "^2.1.2",
