change jest config

--- a/package.json
+++ b/package.json
@@ -78,7 +78,7 @@
     "concurrently": "^4.1.0",
     "del": "^3.0.0",
     "enzyme": "^3.3.0",
-    "enzyme-adapter-react-16": "^1.1.1",
+    "enzyme-adapter-react-16": "^1.7.0",
     "enzyme-to-json": "^3.3.4",
     "eslint": "^5.9.0",
     "eslint-config-airbnb": "^17.1.0",
@@ -97,6 +97,7 @@
     "jest": "^23.1.0",
     "jest-css-modules": "^1.1.0",
     "jest-styled-components": "^6.1.1",
+    "jest-svg-transformer": "^1.0.0",
     "jsdom": "^13.0.0",
     "lint-staged": "^8.0.5",
     "nodemon": "^1.17.3",
