--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "redux-thunk": "^2.2.0",
     "serve-favicon": "^2.5.0",
     "styled-components": "^4.1.1",
-    "styled-system": "^3.1.11"
+    "styled-system": "^3.1.11",
+    "unfetch": "^4.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.1.2",
