--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
     "react-apollo": "^2.1.3",
     "react-async-bootstrapper": "^2.1.0",
     "react-async-component": "^2.0.0",
+    "react-day-picker": "^7.2.4",
     "react-dom": "^16.3.1",
+    "react-dropzone": "^7.0.1",
     "react-froala-wysiwyg": "^2.9.1",
     "react-hot-loader": "^4.2.0",
     "react-html-parser": "^2.0.2",
