--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "cors": "^2.8.4",
     "create-index": "^2.3.0",
     "css-loader": "^1.0.1",
+    "date-fns": "^1.29.0",
     "express": "^4.16.3",
     "express-request-language": "^1.1.15",
     "fast-xml-parser": "^3.9.10",
@@ -33,7 +34,7 @@
     "react-apollo": "^2.1.3",
     "react-async-bootstrapper": "^2.1.0",
     "react-async-component": "^2.0.0",
-    "react-day-picker": "^7.2.4",
+    "react-datepicker": "^2.0.0",
     "react-dom": "^16.3.1",
     "react-dropzone": "^7.0.1",
     "react-froala-wysiwyg": "^2.9.1",
