--- a/package.json
+++ b/package.json
@@ -42,11 +42,13 @@
     "react-html-parser": "^2.0.2",
     "react-icons-kit": "^1.2.1",
     "react-localize-redux": "^3.5.1",
+    "react-maskedinput": "^4.0.1",
     "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
     "react-router-config": "^4.4.0-beta.6",
     "react-router-dom": "^4.2.2",
     "react-select": "^2.1.1",
+    "react-sortable-tree": "^2.6.0",
     "rebass": "^2.0.0-10",
     "redux": "^4.0.0",
     "redux-form": "^7.3.0",
