--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "jest-svg-transformer": "^1.0.0",
     "js-cookie": "^2.2.0",
     "lodash": "^4.17.10",
+    "next": "^7.0.2",
     "node-fetch": "^2.1.2",
     "prop-types": "^15.6.1",
     "query-string": "^6.0.0",
