--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "apollo-cache-inmemory": "^1.1.12",
     "apollo-client": "^2.2.8",
     "apollo-link-http": "^1.5.4",
+    "apollo-link-schema": "^1.1.4",
     "cookie-parser": "^1.4.3",
     "cors": "^2.8.4",
     "create-index": "^2.3.0",
@@ -14,6 +15,7 @@
     "date-fns": "^1.29.0",
     "express": "^4.16.3",
     "express-request-language": "^1.1.15",
+    "faker": "^4.1.0",
     "fast-xml-parser": "^3.9.10",
     "fs-extra": "^7.0.1",
     "graphql": "^14.0.2",
