--- a/package.json
+++ b/package.json
@@ -46,6 +46,8 @@
     "react-icons-kit": "^1.2.1",
     "react-localize-redux": "^3.5.1",
     "react-maskedinput": "^4.0.1",
+    "react-notification-system": "^0.2.17",
+    "react-notification-system-redux": "^1.2.0",
     "react-popper": "^1.3.2",
     "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
