--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "@babel/core": "^7.1.2",
     "@babel/node": "^7.0.0",
     "@babel/plugin-proposal-class-properties": "^7.1.0",
+    "@babel/plugin-proposal-decorators": "^7.2.3",
     "@babel/plugin-proposal-export-namespace-from": "^7.0.0",
     "@babel/plugin-proposal-throw-expressions": "^7.0.0",
     "@babel/plugin-syntax-dynamic-import": "^7.0.0",
@@ -130,10 +131,12 @@
     "serialize-javascript": "^1.5.0",
     "simple-git": "^1.96.0",
     "style-loader": "^0.23.1",
+    "uglifyjs-webpack-plugin": "^2.1.1",
     "url-loader": "^1.0.1",
     "waait": "^1.0.2",
     "webpack": "^4.5.0",
     "webpack-assets-manifest": "^3.0.1",
+    "webpack-bundle-analyzer": "^3.0.3",
     "webpack-cli": "^3.1.2",
     "webpack-dev-middleware": "^3.1.2",
     "webpack-dev-server": "^3.1.4",
