--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "unfetch": "^4.0.1"
   },
   "devDependencies": {
+    "@babel/cli": "^7.2.3",
     "@babel/core": "^7.1.2",
     "@babel/node": "^7.0.0",
     "@babel/plugin-proposal-class-properties": "^7.1.0",
@@ -163,8 +164,9 @@
     "-prepush": "lint-staged",
     "format": "prettier --config .prettierrc --write 'src/**/*.{js,jsx}'",
     "checkMergeConflict": "babel-node ./tools/checkMergeConflict.js",
-    "sg:start": " npx styleguidist server --config ./config/styleguide.config.js",
-    "sg:build": " npx styleguidist build --config ./config/styleguide.config.js"
+    "sg:start": "npx styleguidist server --config ./config/styleguide.config.js",
+    "sg:build": "npx styleguidist build --config ./config/styleguide.config.js",
+    "createIndex": "babel-node tools/createIndex.js"
   },
   "jest": {
     "scriptPreprocessor": "<rootDir>/node_modules/jest-css-modules"
