--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "react-async-bootstrapper": "^2.1.0",
     "react-async-component": "^2.0.0",
     "react-datepicker": "^2.0.0",
+    "react-dnd": "^7.0.2",
+    "react-dnd-html5-backend": "^7.0.2",
     "react-dom": "^16.3.1",
     "react-dropzone": "^7.0.1",
     "react-froala-wysiwyg": "^2.9.1",
@@ -54,7 +56,6 @@
     "react-router-config": "^4.4.0-beta.6",
     "react-router-dom": "^4.2.2",
     "react-select": "^2.1.1",
-    "react-treebeard": "^3.1.0",
     "rebass": "^2.0.0-10",
     "redux": "^4.0.0",
     "redux-form": "^7.3.0",
