--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "ignore-loader": "^0.1.2",
     "isomorphic-fetch": "^2.2.1",
     "jest-svg-transformer": "^1.0.0",
+    "jest-transform-graphql": "^2.1.0",
     "js-cookie": "^2.2.0",
     "lodash": "^4.17.10",
     "next": "^7.0.2",
