Добавил номер порка 3006 в скрипты сборки

--- a/package.json
+++ b/package.json
@@ -155,8 +155,8 @@
     "build": "babel-node scripts/build.spa.js --mode=production --watch=false",
     "build:prod": "babel-node scripts/build.spa.js --mode=production --watch=false",
     "build:dev": "babel-node scripts/build.spa.js --mode=development --watch=false",
-    "build:ssr:prod": "babel-node scripts/build.ssr.js --mode=production  --watch=false --ssr_fetch=false",
-    "build:ssr:dev": "babel-node scripts/build.ssr.js --mode=development  --watch=false --ssr_fetch=false",
+    "build:ssr:prod": "babel-node scripts/build.ssr.js --port=3006 --mode=production  --watch=false --ssr_fetch=false",
+    "build:ssr:dev": "babel-node scripts/build.ssr.js --port=3006 --mode=development  --watch=false --ssr_fetch=false",
     "start:ssr": "babel-node scripts/start.ssr.js --port=3006 --mode=development --watch=true --ssr_fetch=false",
     "start:ssr:server": "node public/server.js",
     "test": "jest",
