add shallowequal, deep-equal

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "create-index": "^2.3.0",
     "css-loader": "^1.0.1",
     "date-fns": "^1.29.0",
+    "deep-equal": "^1.0.1",
     "express": "^4.16.3",
     "express-request-language": "^1.1.15",
     "faker": "^4.1.0",
@@ -64,6 +65,7 @@
     "redux-form": "^7.3.0",
     "redux-thunk": "^2.2.0",
     "serve-favicon": "^2.5.0",
+    "shallowequal": "^1.1.0",
     "styled-components": "^4.1.1",
     "styled-system": "^3.1.11",
     "unfetch": "^4.0.1",
