--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "css-loader": "^1.0.1",
     "date-fns": "^1.29.0",
     "deep-equal": "^1.0.1",
+    "deep-find": "^1.0.0",
     "express": "^4.16.3",
     "express-request-language": "^1.1.15",
     "faker": "^4.1.0",
@@ -35,16 +36,18 @@
     "lodash": "^4.17.10",
     "next": "^7.0.2",
     "node-fetch": "^2.1.2",
+    "object-path": "^0.11.4",
     "prop-types": "^15.6.1",
     "query-string": "^6.0.0",
-    "react": "^16.3.1",
+    "react": "next",
     "react-apollo": "^2.1.3",
     "react-async-bootstrapper": "^2.1.0",
     "react-async-component": "^2.0.0",
+    "react-contenteditable": "^3.2.5",
     "react-datepicker": "^2.0.0",
     "react-dnd": "^7.0.2",
     "react-dnd-html5-backend": "^7.0.2",
-    "react-dom": "^16.3.1",
+    "react-dom": "next",
     "react-dropzone": "^7.0.1",
     "react-froala-wysiwyg": "^2.9.1",
     "react-hot-loader": "^4.2.0",
