--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "create-index": "^2.3.0",
     "css-loader": "^1.0.1",
     "date-fns": "^1.29.0",
+    "dayjs": "^1.8.0",
     "deep-equal": "^1.0.1",
     "deep-find": "^1.0.0",
     "express": "^4.16.3",
     "express-request-language": "^1.1.15",
     "faker": "^4.1.0",
+    "fast-deep-equal": "^2.0.1",
     "fast-xml-parser": "^3.9.10",
     "fs-extra": "^7.0.1",
     "graphql": "^14.0.2",
