--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@emotion/core": "^10.0.6",
     "@emotion/styled": "^10.0.6",
     "apollo-cache-inmemory": "^1.1.12",
+    "apollo-cache-invalidation": "^0.0.3",
     "apollo-client": "^2.2.8",
     "apollo-link-http": "^1.5.4",
     "apollo-link-schema": "^1.1.4",
