--- a/package.json
+++ b/package.json
@@ -38,7 +38,6 @@
     "jquery": "^3.3.1",
     "js-cookie": "^2.2.0",
     "lodash": "^4.17.10",
-    "next": "^7.0.2",
     "node-fetch": "^2.1.2",
     "object-path": "^0.11.4",
     "prop-types": "^15.6.1",
@@ -170,7 +169,7 @@
     "build:dev": "babel-node scripts/build.spa.js --ENDPOINT_CLIENT='\"\"' --mode=development --watch=false",
     "build:ssr:prod": "babel-node scripts/build.ssr.js --port=3006 --ENDPOINT_SERVER='\"http://127.0.0.1:5002\"' --ENDPOINT_CLIENT='\"\"' --mode=production  --watch=false --ssr_fetch=false",
     "build:ssr:dev": "babel-node scripts/build.ssr.js --port=3006 --ENDPOINT_SERVER='\"http://127.0.0.1:5002\"' --ENDPOINT_CLIENT='\"\"' --mode=development  --watch=false --ssr_fetch=false",
-    "start:ssr": "babel-node scripts/start.ssr.js --port=3006 --ENDPOINT_SERVER='\"https://okan.code-artel.com\"' --ENDPOINT_CLIENT='\"\"' --mode=development --watch=true --ssr_fetch=false",
+    "start:ssr": "babel-node scripts/start.ssr.js --port=3006 --ENDPOINT_SERVER='\"https://okan.test.code-artel.com\"' --ENDPOINT_CLIENT='\"\"' --mode=development --watch=true --ssr_fetch=false",
     "start:ssr:server": "node public/server.js",
     "test": "jest",
     "test:snapshot:update": "jest --updateSnapshot",
