--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "apollo-client": "^2.2.8",
     "apollo-link-http": "^1.5.4",
     "apollo-link-schema": "^1.1.4",
+    "babel-plugin-react-transform": "^3.0.0",
     "cookie-parser": "^1.4.3",
     "cors": "^2.8.4",
     "create-index": "^2.3.0",
@@ -54,6 +55,7 @@
     "react-dropzone": "^7.0.1",
     "react-froala-wysiwyg": "^2.9.1",
     "react-helmet": "^5.2.0",
+    "react-highlight-words": "^0.16.0",
     "react-hot-loader": "^4.2.0",
     "react-html-parser": "^2.0.2",
     "react-icons-kit": "^1.2.1",
@@ -67,6 +69,8 @@
     "react-router-config": "^4.4.0-beta.6",
     "react-router-dom": "^4.2.2",
     "react-select": "^2.1.1",
+    "react-text-highlighter": "^0.0.5",
+    "react-transform-hmr": "^1.0.4",
     "rebass": "^2.0.0-10",
     "redux": "^4.0.0",
     "redux-form": "^7.3.0",
