--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "js-cookie": "^2.2.0",
     "lodash": "^4.17.10",
     "node-fetch": "^2.1.2",
+    "object-assign": "^4.1.1",
     "object-path": "^0.11.4",
     "prop-types": "^15.6.1",
     "query-string": "^6.0.0",
