--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "css-loader": "^1.0.1",
     "date-fns": "^1.29.0",
     "dayjs": "^1.8.0",
+    "dayjs-ext": "^2.2.0",
+    "dayjs-plugin-utc": "^0.1.0",
     "deep-equal": "^1.0.1",
     "deep-find": "^1.0.0",
     "express": "^4.16.3",
