--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "faker": "^4.1.0",
     "fast-deep-equal": "^2.0.1",
     "fast-xml-parser": "^3.9.10",
+    "file-saver": "^2.0.1",
     "fs-extra": "^7.0.1",
     "graphql": "^14.0.2",
     "graphql-tag": "^2.9.1",
