--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "dependencies": {
     "@emotion/core": "^10.0.6",
     "@emotion/styled": "^10.0.6",
-    "@sentry/browser": "^5.0.5",
+    "@sentry/browser": "5.0.5",
     "apollo-cache-inmemory": "^1.1.12",
     "apollo-cache-invalidation": "^0.0.3",
     "apollo-client": "^2.2.8",
