--- a/package.json
+++ b/package.json
@@ -176,8 +176,8 @@
     "build": "babel-node scripts/build.spa.js --mode=production --watch=false",
     "build:prod": "babel-node scripts/build.spa.js --ENDPOINT_CLIENT='\"\"' --mode=production --watch=false",
     "build:dev": "babel-node scripts/build.spa.js --ENDPOINT_CLIENT='\"\"' --mode=development --watch=false",
-    "build:ssr:prod": "babel-node scripts/build.ssr.js --port=3006 --ENDPOINT_SERVER='\"http://127.0.0.1:5002\"' --ENDPOINT_CLIENT='\"\"' --mode=production  --watch=false --ssr_fetch=false",
-    "build:ssr:dev": "babel-node scripts/build.ssr.js --port=3006 --ENDPOINT_SERVER='\"http://127.0.0.1:5002\"' --ENDPOINT_CLIENT='\"\"' --mode=development  --watch=false --ssr_fetch=false",
+    "build:ssr:prod": "babel-node scripts/build.ssr.js --port=3006 --ENDPOINT_SERVER='\"https://127.0.0.1:5002\"' --ENDPOINT_CLIENT='\"\"' --mode=production  --watch=false --ssr_fetch=false",
+    "build:ssr:dev": "babel-node scripts/build.ssr.js --port=3006 --ENDPOINT_SERVER='\"https://127.0.0.1:5002\"' --ENDPOINT_CLIENT='\"\"' --mode=development  --watch=false --ssr_fetch=false",
     "start:ssr": "babel-node scripts/start.ssr.js --port=3006 --ENDPOINT_SERVER='\"https://okan.test.code-artel.com\"' --ENDPOINT_CLIENT='\"\"' --mode=development --watch=true --ssr_fetch=false",
     "start:ssr:server": "node public/server.js",
     "test": "jest",
