--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "object-assign": "^4.1.1",
     "object-path": "^0.11.4",
     "prop-types": "^15.6.1",
+    "puppeteer": "^1.17.0",
     "query-string": "^6.0.0",
     "react": "next",
     "react-addons-shallow-compare": "^15.6.2",
@@ -191,7 +192,7 @@
     "build:ssr:dev": "babel-node scripts/build.ssr.js --port=3006 --ENDPOINT_SERVER='\"https://127.0.0.1:5002\"' --ENDPOINT_CLIENT='\"\"' --mode=development  --watch=false --ssr_fetch=false",
     "start:ssr": "babel-node scripts/start.ssr.js --port=3006 --ENDPOINT_SERVER='\"https://okan.test.code-artel.com\"' --ENDPOINT_CLIENT='\"\"' --mode=development --watch=true --ssr_fetch=false",
     "start:ssr:server": "node public/server.js",
-    "test": "jest",
+    "test": "jest --runTestsByPath='src/imageSnapshots.test.js'",
     "test:snapshot:update": "jest --updateSnapshot",
     "lint:js": "eslint ./src ./tools --color --format stylish --fix",
     "-precommit": "npm run checkMergeConflict -q",
