--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
     "dayjs-plugin-utc": "^0.1.0",
     "deep-equal": "^1.0.1",
     "deep-find": "^1.0.0",
+    "delete-react-zombies": "^0.0.3",
     "express": "^4.16.3",
     "express-request-language": "^1.1.15",
     "faker": "^4.1.0",
     "fast-deep-equal": "^2.0.1",
     "fast-xml-parser": "^3.9.10",
     "file-saver": "^2.0.1",
+    "font-awesome": "^4.7.0",
     "fs-extra": "^7.0.1",
     "graphql": "^14.0.2",
     "graphql-tag": "^2.9.1",
@@ -48,18 +50,19 @@
     "object-path": "^0.11.4",
     "prop-types": "^15.6.1",
     "query-string": "^6.0.0",
-    "react": "next",
+    "react": "^16.8.6",
     "react-addons-shallow-compare": "^15.6.2",
-    "react-apollo": "^2.1.3",
+    "react-apollo": "2.4.1",
+    "react-apollo-hooks": "^0.4.5",
     "react-async-bootstrapper": "^2.1.0",
     "react-async-component": "^2.0.0",
     "react-contenteditable": "^3.2.5",
     "react-datepicker": "^2.0.0",
     "react-dnd": "^7.0.2",
     "react-dnd-html5-backend": "^7.0.2",
-    "react-dom": "next",
+    "react-dom": "^16.8.6",
     "react-dropzone": "^7.0.1",
-    "react-froala-wysiwyg": "^2.9.1",
+    "react-froala-wysiwyg": "^3.0.0-rc.2",
     "react-helmet": "^5.2.0",
     "react-highlight-words": "^0.16.0",
     "react-hot-loader": "^4.2.0",
@@ -171,7 +174,7 @@
     "write-file-webpack-plugin": "^4.3.2"
   },
   "scripts": {
-    "start": "babel-node scripts/start.spa.js --mode=development --watch=true --ssr_fetch=false",
+    "start": "babel-node scripts/start.spa.js  --port=3006 --ENDPOINT_SERVER='\"https://okan.test.code-artel.com\"' --ENDPOINT_CLIENT='\"\"' --mode=development --watch=true --ssr_fetch=false",
     "start:server": "babel-node scripts/start.build.spa.js",
     "build": "babel-node scripts/build.spa.js --mode=production --watch=false",
     "build:prod": "babel-node scripts/build.spa.js --ENDPOINT_CLIENT='\"\"' --mode=production --watch=false",
