--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "fast-xml-parser": "^3.9.10",
     "file-saver": "^2.0.1",
     "font-awesome": "^4.7.0",
+    "froala-editor": "^3.0.0",
     "fs-extra": "^7.0.1",
     "graphql": "^14.0.2",
     "graphql-tag": "^2.9.1",
