--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "fast-xml-parser": "^3.9.10",
     "file-saver": "^2.0.1",
     "font-awesome": "^4.7.0",
-    "froala-editor": "^3.0.0",
+    "froala-editor": "2.9.1",
     "fs-extra": "^7.0.1",
     "graphql": "^14.0.2",
     "graphql-tag": "^2.9.1",
@@ -63,7 +63,7 @@
     "react-dnd-html5-backend": "^7.0.2",
     "react-dom": "^16.8.6",
     "react-dropzone": "^7.0.1",
-    "react-froala-wysiwyg": "^3.0.0-rc.2",
+    "react-froala-wysiwyg": "2.9.1",
     "react-helmet": "^5.2.0",
     "react-highlight-words": "^0.16.0",
     "react-hot-loader": "^4.2.0",
