--- a/.babelrc
+++ b/.babelrc
@@ -5,6 +5,7 @@
   ],
   "plugins": [
     "@babel/plugin-syntax-dynamic-import",
+    "babel-plugin-dynamic-import-node",
     ["@babel/plugin-proposal-class-properties", { "loose": true }],
     "@babel/plugin-proposal-export-namespace-from",
     "@babel/plugin-proposal-throw-expressions",
