--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@emotion/core": "^10.0.6",
     "@emotion/styled": "^10.0.6",
     "@sentry/browser": "5.0.5",
+    "@testing-library/react": "^8.0.1",
     "apollo-cache-inmemory": "^1.1.12",
     "apollo-cache-invalidation": "^0.0.3",
     "apollo-client": "^2.2.8",
@@ -80,6 +81,7 @@
     "react-router-config": "^4.4.0-beta.6",
     "react-router-dom": "^4.2.2",
     "react-select": "^2.1.1",
+    "react-testing-library": "^8.0.1",
     "rebass": "^2.0.0-10",
     "redux": "^4.0.0",
     "redux-form": "^7.3.0",
